# rect-lib

./: Cargo.toml  README.md
algorithms/: unobstructed_subrectangles.md
src/: basic_rectangle.rs  lib.rs  unobstructed_sweep_line.rs
tests/: basic_rectangle.rs  unobstructed_subrectangles.rs
