[package]
name = "rect-lib"
version = "0.1.0"
edition = "2021"
description = "A library for interacting with rectangle like structures in rust"

readme = "README.md"

keywords = ["rect", "rectangle", "trait", "lib", "library"]
authors = ["Owen Friedman <5-pebble@protonmail.com>"]
repository = "https://github.com/5-pebbles/rect-lib"
homepage = "https://github.com/5-pebbles/rect-lib"

license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.2"
